--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,37 @@
+# =========================
+# OS generated files
+# =========================
+
+# macOS
 .DS_Store
 
-.env
+# =========================
+# Editor / IDE files
+# =========================
 
+# VS Code
+.vscode/
+
+# JetBrains
+.idea/
+*.iml
+
+# Vim
+*.swp
+*.swo
+
+
+# =========================
+# Environment files
+# =========================
+.env
+.env.*
+
+
+# =========================
+# Python
+# =========================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
